--- a/resource/captive.html
+++ b/resource/captive.html
@@ -60,6 +60,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: calc(80vw / 25 * 2/*1.618*/); /* old browser */
         font-size: min(calc(80vw / 25 * 2/*1.618*/), 5rem); /* 80% of viewport for 25 symbols * "pretty look" modifier */
         min-height: calc(3em * 1.3 + 2rem);
     }
@@ -76,6 +77,12 @@
     }
     a {
       color: rgb(84, 173, 247);
+    }
+    @media screen and (min-width: 78.125rem) {
+      /* 0.8x / 25 * 2 = 5rem old browser ( min(calc(80vw / 25 * 2), 5rem) ) */
+      .content {
+          font-size: 5rem !important;
+      }
     }
   </style>
 </head>
