lamp action added update docs and todo

--- a/resource/index.html
+++ b/resource/index.html
@@ -327,6 +327,19 @@
           #off#not set#/settings/Lights/Headlights#
       </span>
     </div>
+    <div class="control" data-control-id="lamp" data-control-type="switch" data-control-groups="gear">
+      <p class="full-size">Light Amp.</p>
+      <p class="compact">LAmp</p>
+      <span class="switched-on">amplified</span>
+      <span class="switched-off">native</span>
+      <kbd>+ralt+l</kbd>
+      <span class="description">
+          Cockpit light amplification system. Use game settings to configure separate "on" and "off" actions, then do same for this control.
+          #switch#rAlt+L#/settings/Vehicles - Seats and Operator Modes/Light Amplification Toggle#
+          #on#not set#/settings/Vehicles - Seats and Operator Modes/Light Amplification On#
+          #off#not set#/settings/Vehicles - Seats and Operator Modes/Light Amplification Off#
+      </span>
+    </div>
     <div class="control" data-control-id="land-req" data-control-type="oneshot" data-control-groups="request">
       <p class="full-size">Landing Req.</p>
       <p class="compact">LndRq</p>
